--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        env:
+          PACKAGE_NAME: ${{variables.PACKAGE_NAME}}
 
       - name: Set up Python
         uses: actions/setup-python@v2
