--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         env:
-          PACKAGE_NAME: ${{variables.PACKAGE_NAME}}
+          PACKAGE_NAME: ${{vars.PACKAGE_NAME}}
 
       - name: Set up Python
         uses: actions/setup-python@v2
