--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Run tests
         run: python mob-reaper.py  # Run the Python script
         env:
-          PACKAGE_NAME: ${{env.PACKAGE_NAME}}
+          PACKAGE_NAME: ${{vars.PACKAGE_NAME}}
