--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,10 +19,10 @@ jobs:
         with:
           python-version: '3.x'  # Use the latest Python 3.x version
 
-      # - name: Install dependencies (if needed)
-      #   run: |
-      #     python -m pip install --upgrade pip  # Upgrade pip
-      #     pip install -r requirements.txt || echo "No requirements.txt found"  # Install dependencies (if any)
+      - name: Install dependencies 
+        run: |
+          python -m pip install --upgrade pip  # Upgrade pip
+          pip install -r requirements.txt || echo "No requirements.txt found"  # Install dependencies (if any)
 
       - name: Run tests
         run: python mob_reaper.py  # Run the Python script
