--- a/.env
+++ b/.env
@@ -9,9 +9,17 @@ INSECURE_LOGGING_CWE=CWE-532: Insertion of Sensitive Information into Log File
 INSECURE_LOGGING_REMEDIATION=Ensure that logs do not contain sensitive information. Use proper log sanitization techniques, avoid logging raw user input, and configure logging frameworks to exclude sensitive fields. Encrypt logs if necessary and restrict log file access.
 INSECURE_LOGGING_REFS=https://cwe.mitre.org/data/definitions/532.html, https://owasp.org/www-community/vulnerabilities/Information_exposure_through_log_files
 # -
-export ROOT_DETECTION_CWE=CWE-937  
-export ROOT_DETECTION_SEV=High  
-export ROOT_DETECTION_NAME=Root Detection Bypass  
-export ROOT_DETECTION_DESC=The application attempts to detect root access but can be bypassed, allowing attackers to execute privileged operations.  
-export ROOT_DETECTION_REFS=https://cwe.mitre.org/data/definitions/937.html  
-export ROOT_DETECTION_REMEDIATION=Implement multiple root detection techniques and validate on the server-side to prevent bypass.  
+ROOT_DETECTION_CWE=CWE-937  
+ROOT_DETECTION_SEV=High  
+ROOT_DETECTION_NAME=Root Detection Bypass  
+ROOT_DETECTION_DESC=The application attempts to detect root access but can be bypassed, allowing attackers to execute privileged operations.  
+ROOT_DETECTION_REFS=https://cwe.mitre.org/data/definitions/937.html  
+ROOT_DETECTION_REMEDIATION=Implement multiple root detection techniques and validate on the server-side to prevent bypass.  
+#-
+EMULATOR_DETECTION_CWE=CWE-940
+EMULATOR_DETECTION_SEV=High
+EMULATOR_DETECTION_NAME=Emulator Detection Bypass
+EMULATOR_DETECTION_DESC=Detection triggered when an emulator environment is identified, which may indicate an attempt to reverse engineer or bypass security measures.
+EMULATOR_DETECTION_REFS=https://cwe.mitre.org/data/definitions/940.html
+EMULATOR_DETECTION_REMEDIATION=Implement multiple emulator detection techniques, such as hardware checks, sensor readings, and network analysis, and take action when an emulator is detected.
+#-
