--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,3 +28,8 @@ jobs:
         run: python mob_reaper.py  # Run the Python script
         env:
           PACKAGE_NAME: ${{vars.PACKAGE_NAME}}
+
+      - name: Upload SARIF results
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: results.sarif
