--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Upload SARIF results
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: results.sarif
+          sarif_file: ./results.sarif
