add output base

--- a/.env
+++ b/.env
@@ -2,12 +2,13 @@
 
 # VULNERABILITIES
 # -
+INSECURE_LOGGING_RULE_ID=android/insecure-logging
+INSECURE_LOGGING_PRECISION=high
 INSECURE_LOGGING_NAME=Insecure Logging
 INSECURE_LOGGING_DESC=Sensitive data such as credentials, personal information, or authentication tokens are improperly logged, potentially exposing them to unauthorized access.
-INSECURE_LOGGING_SEV=Medium
-INSECURE_LOGGING_CWE=CWE-532: Insertion of Sensitive Information into Log File
-INSECURE_LOGGING_REMEDIATION=Ensure that logs do not contain sensitive information. Use proper log sanitization techniques, avoid logging raw user input, and configure logging frameworks to exclude sensitive fields. Encrypt logs if necessary and restrict log file access.
-INSECURE_LOGGING_REFS=https://cwe.mitre.org/data/definitions/532.html, https://owasp.org/www-community/vulnerabilities/Information_exposure_through_log_files
+INSECURE_LOGGING_SEV=7.5
+INSECURE_LOGGING_CWE=external/cwe/cwe-346
+INSECURE_LOGGING_REMEDIATION="""### Recommendation\nAvoid logging sensitive information such as credentials, tokens, or personal user data. Use `Log.isLoggable()` to control logging levels in production builds.\n\n### Example (Vulnerable Code)\n```java\nLog.d(\"DEBUG\", \"User password: \" + password);\n```\n\n### Fixed Code\n```java\nif (Log.isLoggable(\"DEBUG\", Log.DEBUG)) {\n    Log.d(\"DEBUG\", \"User attempted login\");\n}\n```\n\n### References\n- [Android Developers: Log](https://developer.android.com/reference/android/util/Log)\n- [OWASP Mobile Top 10: Insecure Logging](https://owasp.org/www-project-mobile-top-10/)\n\n### Evidence\n-"""
 # -
 ROOT_DETECTION_CWE=CWE-937  
 ROOT_DETECTION_SEV=High  
