add shared pref

--- a/.env
+++ b/.env
@@ -25,6 +25,12 @@ EMULATOR_DETECTION_SEV=7.5
 EMULATOR_DETECTION_CWE=external/cwe/cwe-940
 EMULATOR_DETECTION_REMEDIATION="### Recommendation\n The application fails to detect if it is running in an emulated environment, allowing attackers to analyze and manipulate its behavior in a controlled setting. This can lead to reverse engineering, data manipulation, and exploitation of vulnerabilities. \n\n### Fixed Code\n```java\npublic boolean isEmulator() {\n    String[] knownEmulatorDevices = {\"generic\", \"unknown\", \"google_sdk\", \"Emulator\", \"Android SDK built for x86\"};\n    for (String device : knownEmulatorDevices) {\n        if (Build.MODEL.contains(device) || Build.MANUFACTURER.contains(device)) {\n            return true;\n        }\n    }\n    return (Build.BRAND.startsWith(\"generic\") && Build.DEVICE.startsWith(\"generic\")) || \"google_sdk\".equals(Build.PRODUCT);\n}\n```\n\n### References\n- [MASWE-0099](https://mas.owasp.org/MASWE/MASVS-RESILIENCE/MASWE-0099)\n\n### Evidence\n"
 
-
+# - Insecure Storage in Shared Preferences  
+INSECURE_STORAGE_SP_RULE_ID=android/insecure-storage-shared-prefs  
+INSECURE_STORAGE_SP_PRECISION=high  
+INSECURE_STORAGE_SP_NAME=Insecure Storage in Shared Preferences  
+INSECURE_STORAGE_SP_SEV=8.0  
+INSECURE_STORAGE_SP_CWE=external/cwe/cwe-312  
+INSECURE_STORAGE_SP_REMEDIATION="### Recommendation\n The application stores sensitive data in SharedPreferences without encryption, making it accessible to attackers through root access or backup extraction. Avoid storing sensitive information in SharedPreferences or encrypt it using Android's EncryptedSharedPreferences API.\n\n### Fixed Code\n```java\nSharedPreferences prefs = PreferenceManager.getDefaultSharedPreferences(context);\nSharedPreferences.Editor editor = prefs.edit();\neditor.putString(\"user_token\", encryptData(\"sensitive_data\"));\neditor.apply();\n\nprivate String encryptData(String data) {\n    try {\n        Key key = new SecretKeySpec(\"your-secret-key\".getBytes(), \"AES\");\n        Cipher cipher = Cipher.getInstance(\"AES\");\n        cipher.init(Cipher.ENCRYPT_MODE, key);\n        return Base64.encodeToString(cipher.doFinal(data.getBytes()), Base64.DEFAULT);\n    } catch (Exception e) {\n        e.printStackTrace();\n        return null;\n    }\n}\n```\n\n### References\n- [MASWE-0020](https://mas.owasp.org/MASWE/MASVS-STORAGE/MASWE-0020)\n\n### Evidence\n"
 
 
